# battery-monitor

./: README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: label-checker.yml  python-package.yml
features/: experimental.py  flags.json
src/: battery_monitor.py  config.example.json
src/battery_monitor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_battery.py
